# Jewelry-AI

./: .gitignore  CLAUDE.md  DevelopmentProgressTracker.md  README.md
ProjectImplementation/usecase1/: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ProjectImplementation/usecase1/.github/workflows/: usecase1-ci.yml
ProjectImplementation/usecase1/.streamlit/: secrets.toml.example
ProjectImplementation/usecase1/agile/epics/: .gitkeep  EPIC-01-platform-foundation.md  EPIC-02-lead-ingestion.md  EPIC-03-inventory-matching.md  EPIC-04-contact-enrichment.md  EPIC-05-outreach-generation.md  EPIC-06-email-delivery.md  EPIC-07-crm-activity-log.md  EPIC-08-lead-scoring.md  EPIC-09-streamlit-dashboard.md  EPIC-10-workflow-automation.md  EPIC-11-auth-rbac.md  EPIC-12-whatsapp-outreach.md  EPIC-13-mlflow-tracking.md  EPIC-14-performance-caching.md  EPIC-15-observability.md
ProjectImplementation/usecase1/agile/stories/: .gitkeep
ProjectImplementation/usecase1/agile/stories/EPIC-01/: US-001-dev-environment-setup.md  US-002-project-skeleton.md  US-003-configuration-setup.md  US-004-alembic-migrations.md  US-005-ci-cd-pipeline.md
ProjectImplementation/usecase1/agile/stories/EPIC-02/: US-006-csv-upload-parsing.md  US-007-lead-deduplication.md  US-008-async-ingestion-task.md  US-009-ingestion-summary.md
ProjectImplementation/usecase1/alembic/: env.py  script.py.mako
ProjectImplementation/usecase1/alembic/versions/: 001_baseline.py  002_leads_table.py  003_contacts_table.py
ProjectImplementation/usecase1/docs/actors/: .gitkeep  ACTORS.md
ProjectImplementation/usecase1/docs/architecture/: .gitkeep  API_SPEC.md  Architecture.md  DB_SCHEMA.md  HLD.md  LLD.md
ProjectImplementation/usecase1/docs/design/: .gitkeep  CodingStandards.md  DesignPatterns.md
ProjectImplementation/usecase1/docs/functional-landscape/: .gitkeep  FUNCTIONAL_LANDSCAPE.md
ProjectImplementation/usecase1/docs/requirements/: .gitkeep  PRD.md  ideas.md
ProjectImplementation/usecase1/rules/: actor-roles-rules.md  epic-rules.md  functional-landscape-rules.md  testing-rules.md  user-story-rules.md
ProjectImplementation/usecase1/src/: .gitkeep  main.py
ProjectImplementation/usecase1/src/agents/: enrichment_agent.py  outreach_agent.py
ProjectImplementation/usecase1/src/api/: dependencies.py  middleware.py
ProjectImplementation/usecase1/src/core/: config.py  dependencies.py  events.py  exceptions.py  job_store.py  logging.py
ProjectImplementation/usecase1/src/db/: base.py  session.py
ProjectImplementation/usecase1/src/domain/: contact.py  lead.py  outreach.py
ProjectImplementation/usecase1/src/integrations/: apollo_client.py  hunter_client.py  proxycurl_client.py  sendgrid_client.py
ProjectImplementation/usecase1/src/repositories/: contact_repository.py  lead_repository.py  outreach_repository.py
ProjectImplementation/usecase1/src/services/: enrichment_service.py  ingestion_service.py  outreach_service.py
ProjectImplementation/usecase1/src/tasks/: celery_app.py  enrichment.py  ingestion.py  outreach.py
ProjectImplementation/usecase1/src/ui/: api_client.py  app.py
ProjectImplementation/usecase1/tests/: conftest.py
ProjectImplementation/usecase1/tests/factories/: __init__.py  contact_factory.py  lead_factory.py  outreach_factory.py
ProjectImplementation/usecase1/tests/integration/: conftest.py  test_enrichment_pipeline_integration.py  test_health_endpoints_integration.py  test_lead_upload_integration.py
ProjectImplementation/usecase1/tests/unit/: conftest.py
(+158 files in other folders)
